<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/about"
                android:onClick="showAbout"
                android:scaleType="fitXY"
                android:src="@drawable/cafe"
                android:layout_margin="4dp"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@+id/img"
                android:layout_alignTop="@+id/img"
                android:contentDescription="@string/app_exit"
                android:onClick="exitApp"
                android:src="@drawable/exit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/cafe_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/cafe_icon2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:onClick="tip"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/website_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/browser_open" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:onClick="openWebsite"
                    android:text="@string/website"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/contact_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:onClick="callUs"
                    android:text="@string/contact_details"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/contact_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/address"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/hours_of_operation_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/work" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/work"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/feedback_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/feedback" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="feedback"
                    android:text="@string/feedback"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/reservation"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>